# fmesh-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/app/: app.cpp  app.h  config.cpp  config.h
src/ble/: ble_client.h  bluez_agent.cpp  bluez_agent.h  bluez_client.cpp  bluez_client.h  win_ble_client.cpp  win_ble_client.h
src/mesh/: db_sync.cpp  db_sync.h  event.h  mesh_codec.cpp  mesh_codec.h  mesh_service.cpp  mesh_service.h  node_db.cpp  node_db.h
src/store/: database.cpp  database.h
src/stream/: stream_client.cpp  stream_client.h  stream_server.cpp  stream_server.h
src/tui/: colors.h  command.cpp  command.h  input_line.cpp  input_line.h  keybinds.cpp  keybinds.h  status_bar.cpp  status_bar.h  theme.h  tui.cpp  tui.h  window.cpp  window.h  window_manager.cpp  window_manager.h
src/util/: event_loop.cpp  event_loop.h  log.cpp  log.h
tests/: fuzz_tcp.py  minitest.h  test_codec.cpp  test_commands.cpp  test_config_modify.cpp  test_database.cpp  test_live_send.cpp  test_main.cpp  test_multi_node_sync.cpp  test_robustness_db.cpp  test_robustness_edge.cpp  test_robustness_stream.cpp  test_routing.cpp  test_sync_data.cpp  test_virtual_nodes.cpp  test_window.cpp
tests/.local/share/fmesh-cli/: config.txt
